fixed an overlapping bug

--- a/resources/css/_post_img.scss
+++ b/resources/css/_post_img.scss
@@ -1,3 +1,2 @@
 .post-img {
-    background-color: white;
 }
