--- a/resources/css/_right_post.scss
+++ b/resources/css/_right_post.scss
@@ -2,6 +2,7 @@
     margin-top: 21px;
     .post-img {
         box-shadow: $shadows-main-color-up;
+        background-color: white;
         img {
             position: relative;
             z-index: 2;
