--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -921,10 +921,6 @@ svg #main-circ {
   }
 }
 
-.post-img {
-  background-color: white;
-}
-
 @media (min-width: 900px) {
   :root {
     --navbar-size: 55px;
@@ -1212,6 +1208,7 @@ svg #main-circ {
   .right-div .right-post-div .post-img {
     -webkit-box-shadow: 0px 0px 13px rgba(157, 89, 0, 0.6);
             box-shadow: 0px 0px 13px rgba(157, 89, 0, 0.6);
+    background-color: white;
   }
   .right-div .right-post-div .post-img img {
     position: relative;
